testsuite/tests/driver/T2499.hs
{-# OPTIONS -package blargh #-}
module Test where
